Replace deprecated for removal constructors with their alternative